@@ -11,6 +11,8 @@ APC extension check			= Проверка за APC cache
 APC extension optional			= APC разширението е незадължително. Ако не е заредено, няма да можете да ползвате TAPCCache.
 Zlib extension check			= Проверка за Zlib
 Zlib extension optional			= Zlib разширението е незадължително. Ако не е заредено, състоянието на страницата няма да бъде компресирано и размера на страницата може да се увеличи.
+Reflection extension check			= Проверка за Reflection разширението
+Reflection extension required			= Reflection разширението е задължително за PRADO.
 DOM extension check			= Проверка за DOM разширението
 DOM extension required			= DOM разширението е задължително за PRADO. Използва се в TXmlDocument за анализ на XML-базирани конфигурации.
 ICONV extension check			= Проверка за ICONV разширението
