@@ -11,6 +11,8 @@ APC extension check = APC缓存模块检查
 APC extension optional = APC模块是可选的。如果它不存在，您将无法使用TAPCCache。
 Zlib extension check = Zlib模块检查
 Zlib extension optional	= Zlib模块是可选的。如果它不存在，页面的状态信息将无法压缩，由此可能导致您的页面传送数据量增大。
+Reflection extension check = Reflection模块检查
+Reflection extension required = Reflection模块是必须的。如果它不存在，PRADO将无法验证控件模板的正确性。
 DOM extension check = DOM模块检查
 DOM extension required = DOM模块是必须的。如果它不存在，基于XML的各种配置文件将无法解析。
 ICONV extension check = ICONV模块检查
