@@ -11,6 +11,8 @@ APC extension check					= APC extension check
 APC extension optional				= APC extension is optional. If it is absent, you will not be able to use TAPCCache.
 Zlib extension check				= Zlib extension check
 Zlib extension optional				= Zlib extension is optional. If it is absent, page state will not be compressed and your page size may increase.
+Reflection extension check			= Reflection extension check
+Reflection extension required		= Reflection extension is required by PRADO. It is used in by PRADO to check the validity of page templates.
 DOM extension check					= DOM extension check
 DOM extension required				= DOM extension is required by PRADO. It is used in TXmlDocument to parse all sorts of XML-based configurations.
 ICONV extension check				= ICONV extension check
