@@ -3,9 +3,10 @@ Version 3.0.5 October 8, 2006
 CHG: Ticket#358 - TFileUpload::saveAs() now returns false instead of exception when error (Qiang)
 ENH: Ticket#361 - Introduced include template tag that supports including external templates (Qiang)
 ENH: Ticket#366 - white spaces are now allowed around attribute names in template (Qiang)
-ENH: Added an interactive PHP shell, usage: "prado-cli.php shell" (Wei)
+ENH: Ticket#378 - PRADO applications can now run in command line (Qiang)
 ENH: Ticket#379 - TAuthorizationRule performance enhancement (Qiang)
 ENH: Easier to customize the TDatePicker using CssClass (Wei)
+ENH: Added an interactive PHP shell, usage: "prado-cli.php shell" (Wei)
 NEW: TLiteralColumn (Qiang)
 NEW: TUrlMapping (Wei)
 
